[gd_scene load_steps=2 format=3 uid="uid://bh6k7alrx0bi7"]

[ext_resource type="Script" uid="uid://hhp458ucjar4" path="res://addons/quest_weaver/ui/questlog/quest_category_header.gd" id="1_qxvwv"]

[node name="QuestCategoryHeader" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qxvwv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HeaderButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
alignment = 0

[node name="MainQuestListContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="QuestTypeSeparator" type="HSeparator" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="SideQuestListContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
